workspaces: using wildcard

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "develop": "missdev --config=jsconfig.json --output=addons"
   },
   "private": true,
-  "workspaces": ["src/addons/volto-facetednavigation"],
+  "workspaces": ["src/addons/*"],
   "addons": ["@rohberg/volto-facetednavigation"],
   "jest": {
     "modulePathIgnorePatterns": [
