--- a/package.json
+++ b/package.json
@@ -98,18 +98,18 @@
   },
   "dependencies": {
     "@plone/volto": "8.6.0",
-    "axios":"0.19.2",
-    "lodash":"4.17.15",
-    "qs":"6.8.0",
-    "react":"16.13.1",
-    "react-dom":"16.13.1",
-    "react-overridable":"0.0.3",
-    "react-redux":"7.2",
-    "redux":"4.0.5",
-    "redux-thunk":"2.3.0",
-    "semantic-ui-css":"2.4.1",
-    "semantic-ui-react":"0.88.0",
-    "@babel/runtime":"7.9.0"
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
+    "qs": "^6.8.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-overridable": "^0.0.3",
+    "react-redux": "^7.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.0",
+    "@babel/runtime": "^7.9.0"
 
   },
   "devDependencies": {
